--- a/config.yml
+++ b/config.yml
@@ -34,15 +34,15 @@
      - name: Starting the MariaDB server
        service: name=mariadb state=started enabled=true
 
-     - name: creates database and table entry
-       mysql_db:
-         name: test
-         state: present
+#     - name: creates database and table entry
+#       mysql_db:
+#         name: test
+#         state: present
      
-     - name: add data to database  
+#     - name: add data to database  
 #       copy: src=dump.sql dest=/tmp/dump.sql
 
-       mysql_db: name=test state=import target=/tmp/dump.sql
+#       mysql_db: name=test state=import target=/tmp/dump.sql
 
      - name: creates motd banner
        debug:
